deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: ingress-nginx
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: angry-kowalevski
        image: raviraaz12/newrepo:latest
        ports:
        - containerPort: 8000
