service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ingress-nginx
  labels:
    app: app
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      # nodeport: 30002
